--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mocha": "^1.21.4",
     "morgan": "^1.4.1",
     "mysql": "^2.10.0",
-    "request": "^2.40.0"
+    "request": "^2.40.0",
+    "sequelize": "^3.15.0"
   },
   "scripts": {
     "test": "mocha server/spec/server-spec.js"
